# server/src/types/comment.type.ts
@@ -1,0 +1,5 @@
+export interface INewCommentReq {
+  nickname: string;
+  pollID: number;
+  content: string;
+}
